# swaggerprobe

./: .gitignore  LICENSE  README.md  pyproject.toml
swaggerprobe/: __init__.py  __main__.py  baseline.py  fp.py  models.py  report.py  request.py  spec.py  swaggerprobe.py
swaggerprobe/checks/: __init__.py  auth.py  bola.py  errors.py  injection.py  massassign.py  method.py
swaggerprobe/selftest/: __init__.py  mock_target.py  sample_openapi.yaml
