[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "swaggerprobe"
version = "0.1.0"
description = "OpenAPI attack surface tester"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Jakk"}]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML"]

[project.scripts]
swaggerprobe = "swaggerprobe.swaggerprobe:main"
